--- a/InternalBookingApp/Views/Shared/_Layout.cshtml
+++ b/InternalBookingApp/Views/Shared/_Layout.cshtml
@@ -1,1 +1,9 @@
-// _Layout.cshtml placeholder content
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/">BookingApp</a>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="/Resources">Resources</a></li>
+            <li class="nav-item"><a class="nav-link" href="/Bookings">Bookings</a></li>
+        </ul>
+    </div>
+</nav>
