--- a/InternalBookingApp/Views/Home/Index.cshtml
+++ b/InternalBookingApp/Views/Home/Index.cshtml
@@ -1,1 +1,8 @@
-// Index.cshtml placeholder content
+@{
+    ViewData["Title"] = "Home Page";
+}
+<div class="text-center mt-5">
+    <h1>Welcome to Internal Booking App</h1>
+    <p class="lead">Manage resources and schedule bookings easily.</p>
+    <a class="btn btn-success" href="/Resources">View Resources</a>
+</div>
