--- a/InternalBookingApp/Views/Bookings/Index.cshtml
+++ b/InternalBookingApp/Views/Bookings/Index.cshtml
@@ -1,1 +1,29 @@
-// Index.cshtml placeholder content
+@model IEnumerable<InternalBookingApp.Models.Booking>
+    @{
+    ViewData["Title"] = "All Bookings";
+    }
+    <h2>All Bookings</h2>
+    <a class="btn btn-primary" href="/Bookings/Create">Create Booking</a>
+    <table class="table table-striped mt-2">
+        <thead>
+            <tr>
+                <th>Resource</th>
+                <th>Start Time</th>
+                <th>End Time</th>
+                <th>Booked By</th>
+                <th>Purpose</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var booking in Model)
+    {
+            <tr>
+                <td>@booking.Resource.Name</td>
+                <td>@booking.StartTime</td>
+                <td>@booking.EndTime</td>
+                <td>@booking.BookedBy</td>
+                <td>@booking.Purpose</td>
+            </tr>
+    }
+        </tbody>
+    </table>
