--- a/InternalBookingApp/Views/Shared/_Layout.cshtml
+++ b/InternalBookingApp/Views/Shared/_Layout.cshtml
@@ -1,9 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">BookingApp</a>
-    <div class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-            <li class="nav-item"><a class="nav-link" href="/Resources">Resources</a></li>
-            <li class="nav-item"><a class="nav-link" href="/Bookings">Bookings</a></li>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>@ViewData["Title"] - Booking App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+</head>
+<body>
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+        <a class="navbar-brand" href="/">BookingApp</a>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+                <a class="nav-link" href="/Resources">Resources</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="/Bookings">Bookings</a>
+            </li>
         </ul>
+    </nav>
+    <div class="container mt-3">
+        @RenderBody()
     </div>
-</nav>
+</body>
+</html>
